some work on q3

--- a/notebooks/tw_data_cleaning.ipynb
+++ b/notebooks/tw_data_cleaning.ipynb
@@ -451,6 +451,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TRIP_EDGE\n",
+       "0    215185\n",
+       "2     67728\n",
+       "1     67415\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bus['TRIP_EDGE'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -575,6 +599,101 @@
     "\n",
     "# subset\n",
     "complete_trips = bus[bus['trip_date'].isin(valid_trips)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "(67351,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# subset to only include trips with exactly one start (1) and one end (2)\n",
+    "# using no_overload df\n",
+    "\n",
+    "# group by trip and count occurence of each value present in TRIP_EDGE\n",
+    "trip_ids_no = no_overload[no_overload['TRIP_EDGE'].isin([1, 2])]\n",
+    "print(trip_ids_no['TRIP_EDGE'].nunique())\n",
+    "\n",
+    "# selects trips with exactly one edge == 1 and one edge == 2\n",
+    "counts_no = trip_ids_no.groupby(['trip_date', 'TRIP_EDGE']).size().unstack(fill_value = 0)\n",
+    "valid_trips_no = counts_no[(counts_no[1] == 1) & (counts_no[2] == 1)].index\n",
+    "print(valid_trips_no.shape)\n",
+    "\n",
+    "# subset\n",
+    "complete_trips_no = no_overload[no_overload['trip_date'].isin(valid_trips_no)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "trip_date\n",
+       "345104120230801    2\n",
+       "350269120230911    2\n",
+       "350271120230911    2\n",
+       "350272120230911    2\n",
+       "350273120230911    2\n",
+       "                  ..\n",
+       "353354120230815    1\n",
+       "352124120230804    1\n",
+       "353048120230929    1\n",
+       "353049120230929    1\n",
+       "352011120230919    1\n",
+       "Name: count, Length: 67358, dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trip_ids_no['trip_date'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "trip_date\n",
+       "350169120230909    4\n",
+       "352285120230929    4\n",
+       "350277120230913    4\n",
+       "352790120230804    4\n",
+       "352999120230915    4\n",
+       "                  ..\n",
+       "351344120230830    1\n",
+       "352714120230810    1\n",
+       "352729120230901    1\n",
+       "352126120230804    1\n",
+       "352010120230919    1\n",
+       "Name: count, Length: 67370, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trip_ids['trip_date'].value_counts()"
    ]
   },
   {
@@ -802,26 +921,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "TRIP_EDGE\n",
-       "0    212497\n",
-       "1     67001\n",
-       "2     67001\n",
+       "0    213711\n",
+       "1     67351\n",
+       "2     67351\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "complete_trips['TRIP_EDGE'].value_counts()"
+    "complete_trips_no['TRIP_EDGE'].value_counts()"
    ]
   },
   {
@@ -1096,6 +1215,83 @@
    ],
    "source": [
     "complete_trips.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67001"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complete_trips.groupby('trip_date').nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3987"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complete_trips['TRIP_ID'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3987"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complete_trips_no['TRIP_ID'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "complete_trips_no are complete trips (with both a 1 and a 2) only including scheduled service (overhead id == 0)\n",
+    "This results in ~ 60 fewer complete trips than including other overhead ids, however there will be duplicate trip_date ids since the replacement service buses are given the same trip id as the original scheduled bus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complete_trips_no.to_csv('../data/complete_scheduled_trips', index = False)"
    ]
   },
   {
